# lqh

./: .gitignore  .prettierignore  CLI.md  CLI_PLAN.md  CONTRIBUTING.md  DATA_GEN_AND_SCORER_CHECK.md  E2E_TEST2.md  NOTICE  PERSISTENCY.md  PERSISTENCY_PLAN.md  README.md  RUN.md  TRAIN_CHECKLIST.md  copy_to_lambda.sh  pyproject.toml  test_all.sh
.github/workflows/: ci.yml
lqh/: __init__.py  agent.py  agent_policy.py  artifacts.py  auth.py  background_tasks.py  cli.py  client.py  config.py  context_stats.py  data_gen_validation.py  dataset_guard.py  engine.py  fsio.py  golden.py  headless.py  jobs.py  manifest.py  models.py  pipeline.py  progress.py  project_identity.py  project_log.py  project_meta.py  runner.py  scoring.py  session.py  signals.py  snapshot.py  sources.py  subprocess_manager.py  sync.py  sysinfo.py  telemetry.py  update_check.py  watcher.py
lqh/cli_cmds/: __init__.py  docs_cmd.py  envelope.py  login_cmd.py  project_cmd.py  registry.py  run_cmd.py  status_cmd.py  tool_cmd.py
lqh/docs/: __init__.py  agents_guide.md
lqh/infer/: __init__.py  __main__.py  engine_sglang.py  eval_hf.py
lqh/remote/: __init__.py  backend.py  bootstrap.py  bundle.py  cloud.py  compute.py  config.py  data_gen.py  gguf_convert.py  gpu.py  merge_lora.py  publish.py  ssh_direct.py  ssh_helpers.py  ssh_slurm.py  transfer.py  watcher.py
lqh/skills/: __init__.py
lqh/tools/: __init__.py  definitions.py  handlers.py  permissions.py  uri.py  validation.py
lqh/train/: __init__.py  __main__.py  calibrate.py  cloud_score.py  data_utils.py  dpo.py  dpo_metrics.py  dpo_sweep.py  load_model.py  progress.py  sft.py  sweep.py  tool_format.py  vlm_data.py
lqh/tui/: __init__.py  app.py  background_tasks.py  commands.py  conversation.py  dataset_viewer.py  dataset_viewer_app.py  renderer.py  status_bar.py
misc/: base_vs_instruct.md
tests/: README.md  conftest.py  test_auto_mode.py  test_byo_integration.py  test_calibrate.py  test_cloud_backend.py  test_compute_resolve.py  test_gguf_convert.py  test_load_model.py  test_progress_sentinel.py  test_runner.py  test_scoring.py  test_scoring_filter.py  test_sources.py  test_tool_calling.py  test_tool_calling_e2e.py  test_tool_handlers.py  test_training.py  test_training_e2e.py  test_tui_conversation.py  test_tui_lifecycle.py  test_tui_prompt_session.py  test_tui_renderer.py  test_vlm_data.py  test_vlm_training_e2e.py
tests/e2e/: harness.py  judge.py  report.py  scenarios.py  test_auto_mode_e2e.py  test_cloud_dpo_smoke.py  test_cloud_eval_hf_smoke.py  test_cloud_finetune_agent_e2e.py  test_cloud_sft_before_after.py  test_cloud_sft_hf_e2e.py  test_cloud_sft_smoke.py  test_datagen_and_eval.py  test_datagen_and_eval_tools.py  test_eval_promptopt.py  test_full_pipeline.py  test_full_pipeline_tools.py  test_observability_gguf.py  test_orchestration_tool_calling_models.py  test_spec_and_datagen.py  test_spec_and_datagen_tools.py  test_spec_only.py  test_spec_only_tools.py  (+1 more)
(+267 files in other folders)
