[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lqh"
version = "0.4.10"
description = "Liquid Harness – customize Liquid AI foundation models into task-specific models."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Liquid AI", email = "hello@liquid.ai" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "openai>=1.0",
    "httpx>=0.27",
    "liquidrandom",
    "datasets",
    "huggingface_hub>=0.20",
    "pyarrow",
    # Image preprocessing for VLM data-gen (resize/re-encode before base64).
    "pillow>=10.0",
]

[project.optional-dependencies]
train = [
    "torch",
    # Lfm2VlImageProcessor (LFM2.5-VL) requires torchvision at processor
    # load time — keep it version-paired with torch.
    "torchvision",
    # <5.4: transformers 5.12 broke lfm2_vl generation (generate() rejects
    # the processor's pixel_attention_mask/spatial_shapes, and dropping
    # them crashes the vision tower). 5.3.0 is validated end-to-end with
    # LFM2.5-VL SFT + generation; revisit the cap on a deliberate bump.
    "transformers>=5.0,<5.4",
    # <1.1: the VLM SFT path relies on the custom-collator +
    # dataset_kwargs={"skip_prepare_dataset"} contract validated on 1.0.
    "trl>=1.0,<1.1",
    "peft>=0.15",
    # Constrained JSON-schema decoding for local eval; integrates with HF
    # transformers via prefix_allowed_tokens_fn. Pure Python, small.
    # NOTE: lm-format-enforcer ≤0.11.3 ships a broken transformers shim that
    # imports ``PreTrainedTokenizerBase`` from the v4 path. We work around it
    # in ``lqh/infer/__main__.py`` so any version compatible with v5 works.
    "lm-format-enforcer>=0.11",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
xfail_strict = true
markers = [
    "integration: tests that hit api.lqh.ai (require LQH_DEBUG_API_KEY or ~/.lqh/config.json)",
    "gpu: tests that require a CUDA GPU and optional [train] deps",
    "remote: tests that require a reachable SSH host (--remote-host)",
    "slow: long-running tests",
]

[project.urls]
Homepage = "https://liquid.ai"

[project.scripts]
lqh = "lqh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lqh"]

# Scope the sdist to the package so untracked working-tree dirs (local
# projects, scratch data) are never swept into the tarball — some contain
# absolute symlinks that break the build. pyproject.toml and the README are
# always included by hatchling for metadata.
[tool.hatch.build.targets.sdist]
only-include = ["lqh", "README.md"]
